examples/test/testpolicy5787.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5787
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key25: value36
      key45: value13
      key49: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value29
      podSelector:
        matchLabels:
          key29: value24
          key49: value25
          key31: value2
